--- a/Build-And-Test-Tools/MSI Installer/win_svg_thumbs.wxs
+++ b/Build-And-Test-Tools/MSI Installer/win_svg_thumbs.wxs
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
 
-	<?define DllSourcePath = "..\..\target\x86_64-pc-windows-msvc\release\win_svg_thumbs.dll" ?>
+	<!-- <?if $(Platform) = x64 ?>
+		<?define DllSourcePath = "win_svg_thumbs_x64.dll" ?>
+		<?define ProductNameSuffix = "(64-bit)" ?>
+		<?define ComponentGuid = "f8ee4ddf-0fbb-4680-8a10-9960182540e6" ?>
+		<?define Win64 = "yes" ?>
+		<?define ProgramFilesFolder = "ProgramFiles64Folder" ?>
+	<?else?>
+		<?define DllSourcePath = "win_svg_thumbs_x86.dll" ?>
+		<?define ProductNameSuffix = "(32-bit)" ?>
+		<?define ComponentGuid = "eed77e44-a1ff-4bcc-92ce-c80718657270" ?>
+		<?define Win64 = "no" ?>
+		<?define ProgramFilesFolder = "ProgramFilesFolder" ?>
+	<?endif?> -->
 
     <Package Name="Thio's SVG Thumbnail Extension" Language="1033" Version="$(var.ProductVersion)" Manufacturer="ThioJoe" UpgradeCode="e345203a-2e6e-4854-9797-fb94221a839a">
         <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
@@ -15,6 +27,9 @@
         <!-- Apparently you have to first define the <Icon> then use that ID for the property. Can't just directly use the icon path in the APPPRODUCTION value -->
 		<Icon Id="MyAppIcon" SourceFile="Resources\icon.ico"/>
 		<Property Id="ARPPRODUCTICON" Value="MyAppIcon" />
+
+        <Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER_X64" />
+
 
         <UI>
             <TextStyle Id="WixUI_Font_Normal" FaceName="Tahoma" Size="8" />
@@ -52,19 +67,42 @@
         <UIRef Id="WixUI_Common" />
 
         <Feature Id="ProductFeature" Title="Thio's SVG Thumbnail Extension Title">
-            <Component Id="win_svg_thumbs.dll" Guid="f8ee4ddf-0fbb-4680-8a10-9960182540e6" Directory="INSTALLFOLDER">
-                <File Id="win_svg_thumbs.dll"
-                      Source="$(var.DllSourcePath)"
+            
+            <!-- Component for the 64-bit DLL. Bitness is automatically inferred from the package's platform (x64). -->
+            <Component Id="Component_x64" Guid="f8ee4ddf-0fbb-4680-8a10-9960182540e6" Bitness="always64" Directory="INSTALLFOLDER_X64">
+                <File Id="File_x64"
+                      Name="win_svg_thumbs_x64.dll"
+                      Source="win_svg_thumbs_x64.dll"
                       KeyPath="yes"
                       SelfRegCost="1" />
             </Component>
+
+            <!-- Component for the 32-bit DLL, pointing to the 32-bit directory ID -->
+            <Component Id="Component_x86" Guid="eed77e44-a1ff-4bcc-92ce-c80718657270" Bitness="always32" Directory="INSTALLFOLDER_X86">
+                <File Id="File_x86"
+                      Name="win_svg_thumbs_x86.dll"
+                      Source="win_svg_thumbs_x86.dll"
+                      KeyPath="yes"
+                      SelfRegCost="1" />
+            </Component>
+
         </Feature>
     </Package>
 
     <Fragment>
+        <!-- EXPLICIT 64-BIT DIRECTORY STRUCTURE -->
+        <!-- This resolves to C:\Program Files\ -->
         <StandardDirectory Id="ProgramFiles64Folder">
-            <Directory Id="ManufacturerFolder" Name="ThioJoe">
-                <Directory Id="INSTALLFOLDER" Name="SVG Thumbnail Extension" />
+            <Directory Id="ManufacturerFolder_x64" Name="ThioJoe">
+                <Directory Id="INSTALLFOLDER_X64" Name="SVG Thumbnail Extension" />
+            </Directory>
+        </StandardDirectory>
+
+        <!-- EXPLICIT 32-BIT DIRECTORY STRUCTURE -->
+        <!-- This resolves to C:\Program Files (x86)\ on a 64-bit OS -->
+        <StandardDirectory Id="ProgramFilesFolder">
+            <Directory Id="ManufacturerFolder_x86" Name="ThioJoe">
+                <Directory Id="INSTALLFOLDER_X86" Name="SVG Thumbnail Extension" />
             </Directory>
         </StandardDirectory>
     </Fragment>
