Add arm64 support

--- a/Build-And-Test-Tools/MSI Installer/win_svg_thumbs.wxs
+++ b/Build-And-Test-Tools/MSI Installer/win_svg_thumbs.wxs
@@ -6,6 +6,7 @@
     <?define Clsid = "{a884a812-58fd-47d5-bda6-4fab4fabdcd9}" ?>
     <?define ComponentGuidX64 = "f8ee4ddf-0fbb-4680-8a10-9960182540e6" ?>
     <?define ComponentGuidX86 = "eed77e44-a1ff-4bcc-92ce-c80718657270" ?>
+    <?define ComponentGuidArm64 = "f44673ee-317d-4d1e-94f6-9b3efd1b50bb" ?>
     <?define ThumbnailProviderShellExGuid = "{E357FCCD-A995-4576-B01F-234630154E96}" ?>
 
     <Package Name="Thio's SVG Thumbnail Extension" Language="1033" Version="$(var.ProductVersion)" Manufacturer="ThioJoe" UpgradeCode="$(var.UpgradeCodeGuid)">
@@ -57,6 +58,7 @@
         <Feature Id="ProductFeature" Title="Thio's SVG Thumbnail Extension Title">
             
             <!-- ========================= 64-bit DLL Component ========================= -->
+            <?if $(sys.BUILDARCH) = x64 ?>
             <Component Id="Component_x64" Guid="$(var.ComponentGuidX64)" Bitness="always64" Directory="INSTALLFOLDER_X64">
                 <File Id="File_x64"
                         Name="win_svg_thumbs_x64.dll"
@@ -85,6 +87,39 @@
                     <RegistryValue Value="$(var.Clsid)" Type="string" />
                 </RegistryKey>
             </Component>
+            <?endif?>
+
+            <!-- ========================= ARM64 DLL Component ========================= -->
+            <?if $(sys.BUILDARCH) = arm64 ?>
+            <Component Id="Component_arm64" Guid="$(var.ComponentGuidArm64)" Bitness="always64" Directory="INSTALLFOLDER_ARM64">
+                <File Id="File_arm64"
+                        Name="win_svg_thumbs_arm64.dll"
+                        Source="win_svg_thumbs_arm64.dll"
+                        KeyPath="yes" 
+                        Vital="yes"
+                        PatchWholeFile="yes"
+                        />
+
+                <!-- CLSID Registration (64 Bit: Will go under HKCR\CLSID) -->
+                <RegistryKey Root="HKCR" Key="CLSID\$(var.Clsid)">
+                    <RegistryValue Value="SVG Thumbnail Provider (Rust)" Type="string" />
+                    <RegistryKey Key="InprocServer32">
+                        <RegistryValue Value="[#File_arm64]" Type="string" />
+                        <RegistryValue Name="ThreadingModel" Value="Apartment" Type="string" />
+                    </RegistryKey>
+                </RegistryKey>
+                
+                <!-- SVG Thumbnail Provider (64 Bit)-->
+                <RegistryKey Root="HKCR" Key=".svg\shellex\$(var.ThumbnailProviderShellExGuid)">
+                    <RegistryValue Value="$(var.Clsid)" Type="string" />
+                </RegistryKey>
+
+                <!-- SVGZ Thumbnail Provider (64 Bit) -->
+                <RegistryKey Root="HKCR" Key=".svgz\shellex\$(var.ThumbnailProviderShellExGuid)">
+                    <RegistryValue Value="$(var.Clsid)" Type="string" />
+                </RegistryKey>
+            </Component>
+            <?endif?>
 
             <!-- ========================= 32-bit DLL Component ========================= -->
             <Component Id="Component_x86" Guid="$(var.ComponentGuidX86)" Bitness="always32" Directory="INSTALLFOLDER_X86">
@@ -123,6 +158,12 @@
         <StandardDirectory Id="ProgramFiles64Folder">
             <Directory Id="ManufacturerFolder_x64" Name="ThioJoe">
                 <Directory Id="INSTALLFOLDER_X64" Name="SVG Thumbnail Extension" />
+            </Directory>
+        </StandardDirectory>
+
+        <StandardDirectory Id="ProgramFiles64Folder">
+            <Directory Id="ManufacturerFolder_arm64" Name="ThioJoe">
+                <Directory Id="INSTALLFOLDER_ARM64" Name="SVG Thumbnail Extension" />
             </Directory>
         </StandardDirectory>
 
